# tqnn-sdk

./: CONTRIBUTING.md  Changelog.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
examples/: 01_quickstart.py  02_tabular.py  03_finance.py  04_text.py  05_eeg.py  06_image_features.py  07_error_handling.py  08_health.py  09_batch_processing.py
tqnn/: __init__.py  client.py
tqnn/tqnn/: client.py
