[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tqnn"
version = "0.1.0"
description = "Python SDK for the TQNN AnyEngine API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TQNN Labs"}
]
dependencies = [
    "requests>=2.31.0"
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["tqnn"]
