[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "tqnn"
version = "0.2.0"
description = "Official Python SDK for the TQNN Fault-Tolerant Inference Platform."
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "TQNN Labs" }
]

requires-python = ">=3.9"

dependencies = [
    "requests>=2.31.0"
]

keywords = [
    "tqnn",
    "python-sdk",
    "api-client",
    "inference",
    "fault-tolerant-inference",
    "confidence-aware",
    "structured-data",
    "diagnostics",
    "machine-learning",
    "rest-api"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]


[project.urls]
Homepage = "https://tqnnlabs.com"
Documentation = "https://tqnn-anyengine-api-914075492772.northamerica-northeast1.run.app/docs"
Repository = "https://github.com/tqnnlabs/tqnn-sdk"
Issues = "https://github.com/tqnnlabs/tqnn-sdk/issues"
API = "https://github.com/tqnnlabs/tqnn-anyengine-api"


[tool.setuptools]
packages = ["tqnn"]